--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -56,7 +56,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          password: ${{ secrets.CR_PAT }}
       
       # Build and push new docker image, skip for manual redeploy other than 'latest'
       - name: Build and push Docker images
@@ -128,7 +128,7 @@ jobs:
 
       - name: Set the value
         run: |
-          echo "GH_TOKEN=${{ secrets.GITHUB_TOKEN }}" >> $GITHUB_ENV
+          echo "GH_TOKEN=${{ secrets.CR_PAT }}" >> $GITHUB_ENV
           echo "USERNAME=${{ secrets.DEPLOY_USERNAME }}" >> $GITHUB_ENV
 
       # Deploy Docker image with ServiceStack application using `docker compose up` remotely
