--- a/.deploy/docker-compose-template.yml
+++ b/.deploy/docker-compose-template.yml
@@ -1,7 +1,7 @@
 version: "3.9"
 services:
-  LiteStreamWeb:
-    image: ${IMAGE_REPO}:${RELEASE_VERSION}
+  ${APP_NAME}:
+    image: ghcr.io/${IMAGE_REPO}:${RELEASE_VERSION}
     restart: always
     network_mode: bridge
     ports:
