--- a/LiteStreamWeb/LiteStreamWeb.csproj
+++ b/LiteStreamWeb/LiteStreamWeb.csproj
@@ -17,6 +17,7 @@
   <ItemGroup>
     <PackageReference Include="ServiceStack" Version="6.*" />
     <PackageReference Include="ServiceStack.OrmLite.Sqlite" Version="6.1.0" />
+    <PackageReference Include="ServiceStack.Server" Version="6.1.1" />
   </ItemGroup>
 
   <ItemGroup>
