--- a/LiteStreamWeb.ServiceInterface/LiteStreamWeb.ServiceInterface.csproj
+++ b/LiteStreamWeb.ServiceInterface/LiteStreamWeb.ServiceInterface.csproj
@@ -6,7 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="ServiceStack" Version="6.*" />
-    <PackageReference Include="ServiceStack.OrmLite" Version="6.1.0" />
+    <PackageReference Include="ServiceStack.OrmLite" Version="6.*" />
   </ItemGroup>
 
   <ItemGroup>
