--- a/LiteStreamWeb/LiteStreamWeb.csproj
+++ b/LiteStreamWeb/LiteStreamWeb.csproj
@@ -16,8 +16,8 @@
 
   <ItemGroup>
     <PackageReference Include="ServiceStack" Version="6.*" />
-    <PackageReference Include="ServiceStack.OrmLite.Sqlite" Version="6.1.0" />
-    <PackageReference Include="ServiceStack.Server" Version="6.1.1" />
+    <PackageReference Include="ServiceStack.OrmLite.Sqlite" Version="6.*" />
+    <PackageReference Include="ServiceStack.Server" Version="6.*" />
   </ItemGroup>
 
   <ItemGroup>
