--- a/.deploy/docker-compose-template.yml
+++ b/.deploy/docker-compose-template.yml
@@ -15,7 +15,7 @@ services:
   litestream:
     image: litestream/litestream
     command: >
-        restore s3://${AWS_S3_BUCKET}/LiteStreamWeb.sqlite -path /data/LiteStreamWeb.sqlite -if-db-not-exists
+        restore s3://${AWS_S3_BUCKET}/LiteStreamWeb.sqlite -if-db-not-exists
         && replicate /data/LiteStreamWeb.sqlite s3://${AWS_S3_BUCKET}/LiteStreamWeb.sqlite
     environment:
       LITESTREAM_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID}
