--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,12 +16,7 @@ on:
         default: latest
         description: Tag you want to release.
         required: true
-permissions:
-  packages: write
-  contents: read
-  actions: read
-  repository-projects: write
-  
+
 jobs:
   push_to_registry:
     runs-on: ubuntu-20.04
@@ -36,7 +31,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           ref: refs/tags/${{ github.event.inputs.version }}
-          
+
       # Assign environment variables used in subsequent steps
       - name: Env variable assignment
         run: echo "image_repository_name=$(echo ${{ github.repository }} | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
@@ -50,14 +45,14 @@ jobs:
           if [ "${{ github.event.inputs.version }}" != "" ]; then
             echo "TAG_NAME=${{ github.event.inputs.version }}" >> $GITHUB_ENV
           fi;
-      
+
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v1
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.CR_PAT }}
-      
+
       # Build and push new docker image, skip for manual redeploy other than 'latest'
       - name: Build and push Docker images
         uses: docker/build-push-action@v2.2.2
@@ -67,7 +62,7 @@ jobs:
           context: .
           push: true
           tags: ghcr.io/${{ env.image_repository_name }}:${{ env.TAG_NAME }}
-  
+
   deploy_via_ssh:
     needs: push_to_registry
     runs-on: ubuntu-20.04
@@ -88,9 +83,9 @@ jobs:
           echo "image_repository_name=$(echo ${{ github.repository }} | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
           echo "domain=${{ secrets.DEPLOY_HOST }}" >> $GITHUB_ENV
           echo "letsencrypt_email=${{ secrets.LETSENCRYPT_EMAIL }}" >> $GITHUB_ENV
-          echo "aws_s3_bucket=${{ secrets.AWS_S3_BUCKET }}" >> $GITHUB_ENV
-          echo "aws_access_key_id=${{ secrets.AWS_ACCESS_KEY_ID }}" >> $GITHUB_ENV
-          echo "aws_secret_access_key=${{ secrets.AWS_SECRET_ACCESS_KEY }}" >> $GITHUB_ENV
+          echo "azure_account_key=${{ secrets.AZURE_ACCOUNT_KEY }}" >> $GITHUB_ENV
+          echo "azure_storage_account=${{ secrets.AZURE_STORAGEACCOUNT }}" >> $GITHUB_ENV
+          echo "azure_container=${{ secrets.AZURE_CONTAINER }}" >> $GITHUB_ENV
           echo "TAG_NAME=latest" >> $GITHUB_ENV
           if [ "${{ github.event.release.tag_name }}" != "" ]; then
             echo "TAG_NAME=${{ github.event.release.tag_name }}" >> $GITHUB_ENV
@@ -108,9 +103,9 @@ jobs:
           APP_NAME: ${{ github.event.repository.name }}
           HOST_DOMAIN: ${{ env.domain }}
           LETSENCRYPT_EMAIL: ${{ env.letsencrypt_email }}
-          AWS_S3_BUCKET: ${{ env.aws_s3_bucket }}
-          AWS_ACCESS_KEY_ID: ${{ env.aws_access_key_id }}
-          AWS_SECRET_ACCESS_KEY: ${{ env.aws_secret_access_key }}
+          AZURE_ACCOUNT_KEY: ${{ env.azure_account_key }}
+          AZURE_STORAGEACCOUNT: ${{ env.azure_storage_account }}
+          AZURE_CONTAINER: ${{ env.azure_container }}
         with:
           input: .deploy/docker-compose-template.yml
           output: .deploy/${{ github.event.repository.name }}-docker-compose.yml
