--- a/.deploy/docker-compose-template.yml
+++ b/.deploy/docker-compose-template.yml
@@ -2,6 +2,8 @@ version: "3.9"
 services:
   ${APP_NAME}:
     image: ghcr.io/${IMAGE_REPO}:${RELEASE_VERSION}
+    depends_on:
+      - ${APP_NAME}-litestream
     restart: always
     network_mode: bridge
     ports:
