Add depends_on condition.

--- a/.deploy/docker-compose-template.yml
+++ b/.deploy/docker-compose-template.yml
@@ -3,7 +3,8 @@ services:
   ${APP_NAME}:
     image: ghcr.io/${IMAGE_REPO}:${RELEASE_VERSION}
     depends_on:
-      - ${APP_NAME}-litestream
+      ${APP_NAME}-litestream:
+        condition: service_started
     restart: always
     network_mode: bridge
     ports:
