--- a/.deploy/docker-compose-template.yml
+++ b/.deploy/docker-compose-template.yml
@@ -3,8 +3,7 @@ services:
   ${APP_NAME}:
     image: ghcr.io/${IMAGE_REPO}:${RELEASE_VERSION}
     depends_on:
-      ${APP_NAME}-litestream:
-        condition: service_started
+      - ${APP_NAME}-litestream
     restart: always
     network_mode: bridge
     ports:
@@ -13,6 +12,8 @@ services:
       VIRTUAL_HOST: ${HOST_DOMAIN}
       LETSENCRYPT_HOST: ${HOST_DOMAIN}
       LETSENCRYPT_EMAIL: ${LETSENCRYPT_EMAIL}
+      DEPLOY_API: ${DEPLOY_API}
+      DEPLOY_CDN: ${DEPLOY_CDN}
     volumes:
       - ${APP_NAME}-mydb:/app
   ${APP_NAME}-litestream:
@@ -20,11 +21,10 @@ services:
     entrypoint: ["/bin/sh", "-c"]
     command:
       - |
-        /usr/local/bin/litestream restore -if-db-not-exists -o /data/app.db s3://${AWS_S3_BUCKET}/LitestreamNextTest.sqlite
-        /usr/local/bin/litestream replicate /data/app.db s3://${AWS_S3_BUCKET}/LitestreamNextTest.sqlite
+        /usr/local/bin/litestream restore -if-db-not-exists -o /data/app.db abs://${AZURE_STORAGEACCOUNT}@${AZURE_CONTAINER}/LitestreamNextTest.sqlite
+        /usr/local/bin/litestream replicate /data/app.db abs://${AZURE_STORAGEACCOUNT}@${AZURE_CONTAINER}/LitestreamNextTest.sqlite
     environment:
-      LITESTREAM_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID}
-      LITESTREAM_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY}
+      LITESTREAM_AZURE_ACCOUNT_KEY: ${AZURE_ACCOUNT_KEY}
     volumes:
       - ${APP_NAME}-mydb:/data
 
