--- a/.deploy/docker-compose-template.yml
+++ b/.deploy/docker-compose-template.yml
@@ -21,10 +21,8 @@ services:
     entrypoint: ["/bin/sh", "-c"]
     command:
       - |
-        /usr/local/bin/litestream restore -if-db-not-exists -o /data/app.db abs://${AZURE_STORAGEACCOUNT}@${AZURE_CONTAINER}/LitestreamNextTest.sqlite
-        /usr/local/bin/litestream replicate /data/app.db abs://${AZURE_STORAGEACCOUNT}@${AZURE_CONTAINER}/LitestreamNextTest.sqlite
-    environment:
-      LITESTREAM_AZURE_ACCOUNT_KEY: ${AZURE_ACCOUNT_KEY}
+        /usr/local/bin/litestream restore -if-db-not-exists -o /data/app.db sftp://${SFTP_USERNAME}:${SFTP_PASSWORD}@${SFTP_HOST}:${SFTP_PORT}/LitestreamNextTest.sqlite
+        /usr/local/bin/litestream replicate /data/app.db sftp://${SFTP_USERNAME}:${SFTP_PASSWORD}@${SFTP_HOST}:${SFTP_PORT}/LitestreamNextTest.sqlite
     volumes:
       - ${APP_NAME}-mydb:/data
 
