Change to vue-site litestream aws

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,4 +25,4 @@ jobs:
     - name: Build
       run: dotnet build ./api
     - name: Test
-      run: dotnet test ./api/LitestreamVueTest.Tests
+      run: dotnet test ./api/LitestreamViteTest.Tests
