--- a/ui/package.json
+++ b/ui/package.json
@@ -1,58 +1,47 @@
 {
-  "private": true,
+  "name": "litestream-vite-test",
+  "version": "0.0.0",
   "scripts": {
     "dev": "vite --open",
     "dtos": "cd src && x ts",
-    "build": "cross-env NODE_ENV=production vite-ssg build",
-    "build:local": "vue-tsc --noEmit && vite-ssg build --mode development",
-    "publish": "npm run build && dotnet publish ../api/LitestreamVueTest/LitestreamVueTest.csproj -c Release",
+    "build": "vue-tsc --noEmit && vite build --emptyOutDir",
+    "build:local": "vue-tsc --noEmit && vite build --mode development --emptyOutDir",
+    "publish": "npm run build && dotnet publish ../api/LitestreamViteTest/LitestreamViteTest.csproj -c Release",
     "serve": "vite preview",
     "typecheck": "vue-tsc --noEmit"
   },
   "dependencies": {
-    "@servicestack/client": "^1.1.21",
-    "@tailwindcss/forms": "^0.5.0",
-    "@tailwindcss/typography": "^0.5.2",
-    "@vueuse/core": "^8.2.3",
-    "nprogress": "^0.2.0",
-    "pinia": "^2.0.13",
+    "@servicestack/client": "^1.1.19",
+    "@vueuse/core": "^7.1.2",
+    "pinia": "^2.0.6",
     "swrv": "^1.0.0-beta.8",
-    "vue": "^3.2.31"
+    "vue": "^3.2.20",
+    "vue-router": "^4.0.12"
   },
   "devDependencies": {
-    "@iconify-json/carbon": "^1.1.2",
-    "@iconify-json/emojione": "^1.1.1",
-    "@iconify-json/et": "^1.1.1",
-    "@iconify-json/fluent": "^1.1.4",
-    "@iconify-json/ic": "^1.1.2",
-    "@iconify-json/line-md": "^1.1.1",
-    "@iconify-json/logos": "^1.1.3",
-    "@iconify-json/mdi": "^1.1.7",
-    "@iconify-json/noto": "^1.1.1",
-    "@iconify-json/octicon": "^1.1.6",
-    "@iconify-json/simple-icons": "^1.1.6",
-    "@iconify-json/simple-line-icons": "^1.1.1",
-    "@types/node": "^17.0.23",
-    "@types/nprogress": "^0.2.0",
-    "@vitejs/plugin-vue": "^2.3.1",
-    "@vue/compiler-sfc": "^3.2.31",
-    "@vue/server-renderer": "^3.2.31",
-    "@vueuse/head": "^0.7.5",
-    "autoprefixer": "^10.4.4",
+    "@iconify-json/emojione": "^1.0.2",
+    "@iconify-json/fluent": "^1.0.12",
+    "@iconify-json/logos": "^1.0.1",
+    "@iconify-json/mdi": "^1.0.10",
+    "@iconify-json/noto": "^1.0.3",
+    "@tailwindcss/forms": "^0.4.0",
+    "@tailwindcss/typography": "^0.5.0",
+    "@types/node": "^16.11.7",
+    "@vitejs/plugin-vue": "^1.9.4",
+    "@vueuse/head": "^0.7.2",
+    "autoprefixer": "^10.4.0",
     "cross-env": "^7.0.3",
-    "postcss": "^8.4.12",
-    "tailwindcss": "^3.0.23",
-    "typescript": "^4.6.3",
-    "unplugin-auto-import": "^0.6.9",
-    "unplugin-icons": "^0.14.1",
-    "unplugin-vue-components": "^0.18.5",
-    "vite": "^2.9.1",
-    "vite-plugin-inspect": "^0.4.3",
-    "vite-plugin-md": "^0.12.4",
-    "vite-plugin-pages": "^0.22.0",
-    "vite-plugin-vue-layouts": "^0.6.0",
-    "vite-ssg": "^0.19.0",
-    "vue-router": "^4.0.14",
-    "vue-tsc": "^0.33.9"
+    "postcss": "^8.4.4",
+    "tailwindcss": "^3.0.1",
+    "typescript": "^4.5.4",
+    "unplugin-auto-import": "^0.5.1",
+    "unplugin-icons": "^0.12.20",
+    "unplugin-vue-components": "^0.17.2",
+    "vite": "^2.6.14",
+    "vite-plugin-inspect": "^0.3.11",
+    "vite-plugin-md": "^0.11.4",
+    "vite-plugin-pages": "^0.19.0-beta.3",
+    "vite-plugin-vue-layouts": "^0.5.0",
+    "vue-tsc": "^0.29.5"
   }
 }
