Change healthcheck test syntax.

--- a/.deploy/docker-compose-template.yml
+++ b/.deploy/docker-compose-template.yml
@@ -21,11 +21,10 @@ services:
     image: litestream/litestream
     entrypoint: ["/bin/sh", "-c"]
     healthcheck:
-      start_period: 5s
       # wait 5 seconds for file restore, since initially app to create database.
       # Once database is established, change startup to not create tables when in prod,
       # and change below to check for file to exist, eg `bash -c "[ -f /data/app.db ]"`.
-      test: "exit 0" 
+      test: [ "CMD", "sleep", "5" ]
     command:
       - |
         /usr/local/bin/litestream restore -if-db-not-exists -o /data/app.db sftp://${SFTP_USERNAME}:${SFTP_PASSWORD}@${SFTP_HOST}:${SFTP_PORT}/LitestreamViteTest.sqlite
