--- a/api/LitestreamViteTest/LitestreamViteTest.csproj
+++ b/api/LitestreamViteTest/LitestreamViteTest.csproj
@@ -17,7 +17,7 @@
   <ItemGroup>
     <PackageReference Include="ServiceStack" Version="6.*" />
     <PackageReference Include="ServiceStack.Client" Version="6.*" />
-    <PackageReference Include="ServiceStack.OrmLite.Sqlite" Version="6.1.0" />
+    <PackageReference Include="ServiceStack.OrmLite.Sqlite" Version="6.*" />
     <PackageReference Include="ServiceStack.Server" Version="6.*" />
     <PackageReference Include="ServiceStack.Text" Version="6.*" />
   </ItemGroup>
