--- a/.deploy/docker-compose-template.yml
+++ b/.deploy/docker-compose-template.yml
@@ -15,7 +15,7 @@ services:
       DEPLOY_API: ${DEPLOY_API}
       DEPLOY_CDN: ${DEPLOY_CDN}
     volumes:
-      - ${APP_NAME}-mydb:/app
+      - ${APP_NAME}-mydb:/app/App_Data
   ${APP_NAME}-litestream:
     image: litestream/litestream
     entrypoint: ["/bin/sh", "-c"]
