--- a/.deploy/docker-compose-template.yml
+++ b/.deploy/docker-compose-template.yml
@@ -20,12 +20,16 @@ services:
   ${APP_NAME}-litestream:
     image: litestream/litestream
     entrypoint: ["/bin/sh", "-c"]
+    # Timeout of health check will need to depend on size of db, and speed of network to host.
     healthcheck:
-      test: /usr/local/bin/litestream restore -if-db-not-exists -o /data/app.db sftp://${SFTP_USERNAME}:${SFTP_PASSWORD}@${SFTP_HOST}:${SFTP_PORT}/LitestreamViteTest.sqlite
+      test: /usr/local/bin/litestream restore -if-db-not-exists -o /data/app.db s3://${AWS_S3_BUCKET}/LitestreamViteTest.sqlite
       timeout: 10m
       retries: 1
     command:
-      - /usr/local/bin/litestream replicate /data/app.db sftp://${SFTP_USERNAME}:${SFTP_PASSWORD}@${SFTP_HOST}:${SFTP_PORT}/LitestreamViteTest.sqlite
+      - /usr/local/bin/litestream replicate /data/app.db s3://${AWS_S3_BUCKET}/LitestreamViteTest.sqlite
+    environment:
+      LITESTREAM_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID}
+      LITESTREAM_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY}
     volumes:
       - ${APP_NAME}-mydb:/data
 
